apps/speedtest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: speedtest-tracker

  template:
    metadata:
      labels:
        app: speedtest-tracker

    spec:
      containers:
        - name: speedtest-tracker
          image: lscr.io/linuxserver/speedtest-tracker:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          volumeMounts:
            - name: speedtest-data
              mountPath: /config

      volumes:
        - name: speedtest-data
          persistentVolumeClaim:
            claimName: speedtest-data
