apps/speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
  namespace: default
spec:
  selector:
    app: speedtest-tracker
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
